fix(UI/Memos): Fix text not wrapping

--- a/ui/src/components/Markdown/Markdown.css
+++ b/ui/src/components/Markdown/Markdown.css
@@ -3,6 +3,9 @@
     @apply prose-ul:my-0 prose-li:p-0 prose-li:my-0;
     @apply dark:prose-invert;
 
+	text-wrap: pretty;
+	overflow-wrap: break-word;
+
     li > p {
         @apply my-0;
     }
